# jlox-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: keywords.hpp  parser.hpp  scanner.hpp  syntax_error.hpp  token.hpp  util.hpp
src/: main.cpp
test/: CMakeLists.txt  parser.cxx  scanner.cxx
